11/20/15-15:48:09: Added gitignore file.